# model-serving

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODING_CONVENTIONS.md  DECISIONS.md  IMPLEMENTATION_CHECK.md  Makefile  PROGRESS.md  README.md  RUNBOOK.md  gunicorn.conf.py  pyproject.toml
app/: main.py
app/adapters/inmemory/: event_bus.py  idem_gate.py  job_repository.py
app/adapters/kafka/: __init__.py  consumer.py  event_bus.py  serializer.py  topics.py
app/adapters/mysql/: __init__.py  errors.py  models.py  repository.py
app/adapters/redis/: idem_gate.py
app/adapters/runtime/: model_runner_stub.py
app/api/: deps.py
app/api/errors/: __init__.py  error_mapper.py  http_exceptions.py
app/api/middleware/: error_mapper.py  exception_group.py  logging.py  request_id.py
app/api/v1/: __init__.py  debug.py  health.py  jobs.py  metrics.py  models.py
app/application/: dto.py  dtos.py  errors.py
app/application/commands/: create_job.py  process_job.py  write_result.py
app/application/policies/: __init__.py  idempotency.py  processing_mode.py
app/application/queries/: get_job.py  get_job_status.py
app/application/usecases/: create_job.py  get_job.py
app/core/: __init__.py  exceptions.py  id_generator.py  logging.py  metrics.py  retry.py  timeouts.py  tracing.py
app/domain/: __init__.py  errors.py  events.py  job.py  model.py
app/observability/: slo_sli.md
app/ports/: blob_store.py  event_bus.py  idempotency.py  job_repository.py  model_runner.py
app/ports/repositories/: __init__.py  job_repository.py
app/worker/: handler.py  main.py
deploy/k8s/base/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml
deploy/k8s/base/api/: deployment.yaml  hpa.yaml  service.yaml
deploy/k8s/base/kafka/: kustomization.yaml  service.yaml  statefulset.yaml
deploy/k8s/base/monitoring/: kustomization.yaml  promrule-slo.yaml  servicemonitor-api.yaml  servicemonitor-worker.yaml  servicemonitor-writer.yaml
deploy/k8s/base/mysql/: deployment.yaml  service.yaml  statefulset.yaml
deploy/k8s/base/networkpolicy/: allow-ingress-to-api.yaml  allow-kafka-mysql-redis.yaml  default-deny.yaml  kustomization.yaml
deploy/k8s/base/pdb/: kustomization.yaml  pdb-api.yaml  pdb-worker.yaml  pdb-writer.yaml
deploy/k8s/base/redis/: deployment.yaml  service.yaml  statefulset.yaml
deploy/k8s/base/worker-ocr-batch/: hpa.yaml  (+3 more)
docker/: api.Dockerfile  docker-compose.dev.yml  docker-compose.yml  worker-ocr.Dockerfile
docker/mysql/init/: 001_init.sql
scripts/: db_init.sh  db_migrate.sh  lint.sh  local_up.sh  smoke_test.sh  test.sh
tests/: conftest.py  test_api_jobs.py
tests/application/: test_create_job.py  test_get_job_status.py
tests/domain/: test_job.py
(+37 files in other folders)
